# expert-giggle

./: CHANGELOG.md  CODEX.md  CONTRIBUTING.md  DEVELOPING.md  DO_NOT_PUBLISH_YET.txt  GOVERNANCE.md  LICENSE-CC-BY-SA-4.0.txt  LICENSE.md  Makefile  PUBLISH_CHECKLIST.md  QUICK_INDEX.md  README.md  RELEASE_NOTES_v0.1.2.md  events.ndjson  pyproject.toml
docs/: SBF_v0.1_Spec.md  Story_Blueprint_Format_v0.1.md  VISION.md
examples/: example_L2.json  example_L3.json  example_L4.json  example_L5.json
experiments/: metrics.py  params.yaml  report.md  run_matrix.py
ingest/: sbf_ingest_srl.py
prompts/: ingest_prompt.txt
sbf/: cli.py
schema/: sbf_schema_v0_1.json
scripts/: build_local.sh  check_events_ndjson.py  events_to_sbf.py  export_ndjson.py  ingest_lmstudio.py  mk_corpus.py  preflight.sh  rt_idempotence.py  rt_l5_text.py
tools/: sbf_pack.py
types/: package.json  sbf.ts  tsconfig.json
validation/: canonical_verbs.json  integrity_check.py  list_sbf_files.py  sbf_validate.py  schema_check.py
validation/tests/: test_examples.py
